# foglamp-rule-simple-expression

./: .gitignore  CMakeLists.txt  Description  Package  README.md  README.rst  make_deb  plugin.cpp
include/: simple_expression.h
